# Telegram-bot-media-transcriber-

./: .replit  README.md  keep_alive.py  main.py  pyproject.toml  render.yaml  user_preferences.json
attached_assets/: Pasted--github-com-GitHub82735-Telegram-bot-media-transcriber-Checking-out-commit-57b3bf3972566eb413-1741716611028.txt  Pasted-Maxaa-kawdaa-rendar-ka-qoraal-kan-Cloning-from-https-github-com-GitHub82735-Telegram-bot-m-1741716569364.txt  Pasted-import-os-import-asyncio-import-speech-recognition-as-sr-from-aiogram-import-Bot-Dispatcher-types--1741689864878.txt
bot/: __init__.py
