[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.18.0",
    "flask>=3.1.0",
    "googletrans==4.0.0rc1",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "speechrecognition>=3.14.1",
]
